--- a/app/wwwroot/src/styles/styles.css
+++ b/app/wwwroot/src/styles/styles.css
@@ -146,8 +146,9 @@ button:focus-visible {
   justify-content: center;
   background-color: #a48147;
   border-radius: 8px;
-  color: #fae8bf;
-  padding: 2px 6px;
+  color: #171818;
+  font-size: 2rem;
+  padding: 4px 8px;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition:
@@ -249,7 +250,7 @@ button:focus-visible {
   bottom: 70px;
   background: rgba(164, 129, 71, 0.9);
   border: none;
-  color: #1b1b1a;
+  color: antiquewhite;
   padding: 6px 10px;
   border-radius: 14px;
   font-size: 0.8rem;
